fix: change URL

--- a/index.html
+++ b/index.html
@@ -29,4 +29,4 @@
 </body>
 
 </html>
-<!-- Source: https://github.com/coderbyheart/world.thingy.rocks -->
+<!-- Source: https://github.com/coderbyheart/ew20.world.thingy.rocks -->
